# node-flock

./: .gitignore  .travis.yml  CMakeLists.txt  binding.gyp  flock.cc  index.js  package.json  readme.md
script/: apt-get-install-deps.sh  brew-install-deps.sh  install-shadow-node.sh
test/: index.test.js
